--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+#Environment
 /reduce
+#log
 *log
+# Compiled python modules.
+*.pyc
+
 /__pycache__
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
