--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@
 # Setuptools distribution folder.
 /dist/
 
+# build Folder
+/build
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
